[package]
name = "rust-curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.2"
reqwest = "0.11.18"
structopt = "0.3.26"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.28.2", features = ["full"] }
http = "0.2.9"
cabot = "0.7.1"
url = "2.4.0"
